# face_recognition

./: Cargo.toml  build.rs
examples/: draw.rs
src/: face_detection.rs  face_encoding.rs  face_landmarks.rs  landmark_prediction.rs  lib.rs
